# My-AE-Plugins

./: .gitignore  AGENTS.md  AdobePlugin.just  Cargo.toml  Justfile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  create_release.yml
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
plugins/color-ajust/: Justfile
plugins/color-ajust/src/: lib.rs
plugins/color-change/: Cargo.toml  Justfile  build.rs
plugins/color-change/src/: lib.rs
plugins/color-convert/: Cargo.toml  Justfile  README.md  build.rs
plugins/color-convert/src/: lib.rs
plugins/contour-generate/: Cargo.toml  Justfile  README.md  build.rs
plugins/contour-generate/src/: lib.rs
plugins/differential-generate/: Cargo.toml  Justfile  README.md  build.rs
plugins/differential-generate/src/: lib.rs
plugins/differential-generate/src/gpu/wgpu/: mod.rs
plugins/differential-generate/src/gpu/wgpu/shaders/: differential.wgsl
plugins/distance-generate/: Cargo.toml  Justfile  README.md  build.rs
plugins/distance-generate/src/: lib.rs
plugins/image-calculate/: Cargo.toml  Justfile  README.md  build.rs
plugins/image-calculate/src/: lib.rs
plugins/mobius-transform/: Cargo.toml  Justfile  README.md  build.rs
plugins/mobius-transform/src/: lib.rs
plugins/normal-generate/: Cargo.toml  Justfile  README.md  build.rs
plugins/normal-generate/src/: lib.rs
plugins/red-noise/: Cargo.toml  Justfile  README.md  build.rs
plugins/red-noise/src/: lib.rs
plugins/region-colorize/: Cargo.toml  Justfile  README.md  build.rs
plugins/region-colorize/src/: lib.rs
plugins/uv-distort-pro/: Cargo.toml  Justfile  README.md  build.rs
plugins/uv-distort-pro/src/: lib.rs
plugins/voronoi-generate/: Cargo.toml  Justfile  README.md  build.rs
plugins/voronoi-generate/src/: lib.rs
plugins/voronoi-generate/src/gpu/wgpu/: mod.rs
plugins/voronoi-generate/src/gpu/wgpu/shaders/: voronoi.wgsl
templates/plugin/: Cargo.toml.liquid  Justfile.liquid  README.md.liquid  build.rs.liquid  cargo-generate.toml  post-script.rhai  pre-script.rhai
templates/plugin/src/: lib.rs.liquid
templates/plugin/src/gpu/: mod.rs.liquid
templates/plugin/src/gpu/wgpu/: mod.rs.liquid
templates/plugin/src/gpu/wgpu/shaders/: compute.wgsl
xtask/: Cargo.toml
xtask/src/: main.rs
