[package]
name = "color_change"
description = "A plugin to change some colors in a footage"
edition = "2024"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[features]
default = []
catch-panics = []

[dependencies]
after-effects = { workspace = true }
seq-macro = "0.3.6"
utils = { path = "../../crates/utils" }

[dev-dependencies]
pipl = { workspace = true }

[build-dependencies]
chrono.workspace = true
pipl.workspace = true

[lints]
workspace = true
