[package]
name = "color_convert"
description = "A plugin that can convert to and from various color spaces from RGB."
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = []
catch-panics = []

[dependencies]
after-effects = { workspace = true }
color-art = "0.3"
palette = "0.7.6"
utils = { path = "../../crates/utils" }


[dev-dependencies]
pipl = { workspace = true }

[build-dependencies]
chrono.workspace = true
pipl.workspace = true

[lints]
workspace = true
