[package]
name = "mobius_transform"
description = "A plugin for applying Mobius transformation to layers."
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = []
catch-panics = []

[dependencies]
after-effects = { workspace = true }
utils = { path = "../../crates/utils" }


[dev-dependencies]
pipl = { workspace = true }

[build-dependencies]
chrono.workspace = true
pipl.workspace = true

[lints]
workspace = true